# pixi-outdated

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  dprint.json  lefthook.yml  pixi.toml
.github/workflows/: ci.yml  release.yml
examples/: pixi.toml
src/: conda.rs  lib.rs  lockfile.rs  main.rs  parser.rs  pixi.rs  pypi.rs
tests/: integration_test.rs
