[package]
name = "pixi-outdated"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rattler = "0.37"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
indicatif = "0.17"
pep440_rs = "0.7"
