[package]
name = "pixi-outdated"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# HTTP and networking
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# Rattler for conda package management
rattler_conda_types = "0.40"
rattler_repodata_gateway = { version = "0.24", features = [
  "gateway",
  "sparse",
] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex for pattern matching
regex = "1.11"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Lazy static initialization
once_cell = "1.20"

# Progress bars and terminal UI
indicatif = "0.17"
