[package]
name = "pixi-outdated"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI tool to find outdated packages in pixi environments"

[dependencies]
# CLI and async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# HTTP and networking
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
url = "2.5"

# Rattler for conda package management
rattler_conda_types = "0.40"
rattler_lock = "0.25"
rattler_repodata_gateway = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex for pattern matching
regex = "1.11"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Progress bars and terminal UI
indicatif = "0.17"
pixi_core = { git = "https://github.com/prefix-dev/pixi", version = "0.1.0" }
pixi_cli = { git = "https://github.com/prefix-dev/pixi", version = "0.1.0" }
pixi_config = { git = "https://github.com/prefix-dev/pixi", version = "0.1.0" }
pixi_manifest = { git = "https://github.com/prefix-dev/pixi", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"


[patch.crates-io]
# Borrowed patch from pixi
reqwest-middleware = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "ad8b9d332d1773fde8b4cd008486de5973e0a3f8" }
